# seminaire-diverse2017

./: .gitignore  Dockerfile  LICENSE  README.md  graph.dot  seminaire-diverse2017-servant.cabal  server.cfg  server.db  stack.yaml
.stack-work/install/x86_64-linux-nopie/lts-9.17/8.0.2/flag-cache/: http-media-0.6.4-L2HKUvjwG4m4RLl78rlCa  natural-transformation-0.4-1wekIVD0YQa62debXjfFg3  seminaire-diverse2017-servant-0.1.0.0-HHD9Qn1kZHW6hp5wfAHMAQ  servant-0.11-5n0Jq59NGG63K7rfpU5Dxs  servant-server-0.11.0.1-Dzlz1R4sOiMKQugTBmyK0x  string-conversions-0.4.0.1-HK2T4drDKhqGigpJdBBdRG
.stack-work/install/x86_64-linux-nopie/lts-9.17/8.0.2/lib/x86_64-linux-ghc-8.0.2/seminaire-diverse2017-servant-0.1.0.0-HHD9Qn1kZHW6hp5wfAHMAQ/: Lib.dyn_hi  Lib.hi
.stack-work/install/x86_64-linux-nopie/lts-9.17/8.0.2/pkgdb/: package.cache  seminaire-diverse2017-servant-0.1.0.0-HHD9Qn1kZHW6hp5wfAHMAQ.conf
app/: Main.hs
spock-tmp/: Main.hs  seminaire-diverse2017-spock.cabal
src/: Config.hs  Data.hs  Db.hs  Domain.hs  Eval.hs  Lib.hs  Services.hs
src-bak/: Lib.hs
