name:                seminaire-diverse2017-servant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/manuelleduc/seminaire-diverse2017-servant#readme
license:             BSD3
license-file:        LICENSE
author:              Manuel Leduc
maintainer:          manuel.leduc@gmail.com
copyright:           CC-by
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Db
                     , Config
                     , Eval
  build-depends: base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , aeson
                     , http-types
                     , string-random == 0.1.0.0
                     , time
                     , persistent
                     , persistent-template
                     , persistent-sqlite
                     , configurator
                     , monad-logger
                     , resourcet
                     , hint
                     , exceptions
  default-language:    Haskell2010

executable seminaire-diverse2017-servant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -optl-static -fPIC -Os
  build-depends:       base
                     , seminaire-diverse2017-servant
  default-language:    Haskell2010

test-suite seminaire-diverse2017-servant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , seminaire-diverse2017-servant
                     , hspec
                     , hspec-wai
                     , hspec-wai-json
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/manuelleduc/seminaire-diverse2017-servant
