name:                seminaire-diverse2017-spock
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/seminaire-diverse2017-spock#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable seminaire-diverse2017-spock
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , Spock >= 0.11
                     , mtl
                     , text
                     , aeson
                     , http-types
                     , string-random == 0.1.0.0
